+++ version 0.12.2
* core: fixed every new profile of Kadu being lost on Windows (regression since 0.11.x) (beevvy)
* qt: ship more stable version of Qt on Windows (beevvy)
* icons: removed lots of unused status icons (beevvy)
* icons: fixed xmpp status icons in freedesktop notifications on GTK+-based platforms (beevvy)

+++ version 0.12.1
* jabber: reconnect after waking up from suspend (Juzef)
* chat styles: #2601 fixed: fix old styles when AllowExecutingFromParser option is enabled (Mikołaj Milej, beevvy)
* tabs: do not automatically activate chat widget when receiving new messages (beevvy)
* gui: display 32x32 avatars on buddy list instead of 31x31 (beevvy)
* parser: #2612 fixed: restored DATA_PATH, HOME, KADU_CONFIG Parser variables (beevvy)
* gadu: #2620 fixed: restored downloading big avatars (beevvy)
* build: migrated to GNUInstallDirs CMake module which should fix installation paths on Debian multiarch (beevvy)
* qt4_docking: #2627 fixed: fixed context menu in bottom panel in Ubuntu 12.04 GNOME Classic session (beevvy)
* icons: #2629 fixed: fixed tray icon size in some cases (beevvy)
* chat, tabs: #2626 fixed: fixed storing opened tabs and recent tabs in some circumstances (beevvy)
* jabber: fixed handling of untrusted server certificates (beevvy)
* gui: #2605 fixed: fixed low contrast highlight colors in messages view, especially on Windows (beevvy)

+++ version 0.12.0
* gui: better preview in configuration window (Vogel)

+++ version 0.12.0-rc1
* network: #2523 fixed: try to connect from time to time even if system tells us we are offline (Vogel)
* tabs: #2118 fixed: add open recent chats button to tabswindow (kelmain)
* sms: #2538 fixed: removed unsupported multibox gateway (Vogel)
* gui: #2588 fixed: in status menu check action of desired status not active one (ultr)

+++ version 0.12.0-beta2
* core: #2403 fixed: start conference with preferred contacts of each buddy instead of first ones (ultr)